# RemoteC

./: .dockerignore  .editorconfig  .env.example  .env.master  .env.template  .gitignore  ARTIFACTS_SUMMARY.md  BUILD_STATUS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_DEPLOYMENT_GUIDE.md  DEMO_QUICKSTART.md  DEPLOYMENT_AND_TESTING_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_AUTH_SUMMARY.md  DEVELOPMENT_SETUP.md  Directory.Build.props  Dockerfile.api  Dockerfile.web  E2E_TESTING_SUMMARY.md  E2E_TEST_EXECUTION_STATUS.md  E2E_TROUBLESHOOTING.md  FINAL_TEST_STATUS.md  HOST_CONNECTION_GUIDE.md  INTERFACE_ENDPOINT_MAPPING.md  LOCAL_NETWORK_QUICKSTART.md  MULTI-MONITOR-DEMO.md  PROJECT_HANDOVER.md  PROJECT_SETUP.md  PROJECT_STATUS_REPORT.md  PROOF-OF-WORKING-SYSTEM.md  README.md  RELEASE_NOTES_v1.0.0.md  RUN_SERVER.bat  RemoteC.sln  SESSION_SUMMARY.md  START_SERVER.bat  TEST_REMEDIATION_REPORT.md  TODO.md  TOOLS_AND_SCRIPTS.md  (+69 more)
src/RemoteC.Core/: Cargo.toml  TDD_TEST_SUITE_SUMMARY.md  build-windows.sh  build.ps1  build.rs  build.sh  build_output.txt  build_output_full.txt  find_build_error.sh  post-build.sh  remotec_core.lib  remotec_core_stub.c  run_tests.sh
src/RemoteC.Core/.cargo/: config.toml
src/RemoteC.Core/benches/: frame_encoding_benchmarks.rs
src/RemoteC.Core/src/: lib.rs  logging.rs  test_modules.rs
src/RemoteC.Core/src/capture/: linux.rs  macos.rs  mod.rs  monitor.rs  tests.rs  windows.rs
src/RemoteC.Core/src/clipboard/: linux.rs  macos.rs  mod.rs  windows.rs
src/RemoteC.Core/src/encoding/: decoder.rs  encoder.rs  error.rs  mod.rs  types.rs
src/RemoteC.Core/src/ffi/: mod.rs
src/RemoteC.Core/src/input/: linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
src/RemoteC.Core/src/transport/: congestion.rs  mod.rs  quic.rs  (+2 more)
src/RemoteC.Core/tests/: basic_frame_encoding_test.rs  clipboard_tests.rs  frame_decoding_tests.rs  frame_encoding_tests.rs  mod.rs  test_decoder_only.rs
(+498 files in other folders)
