[package]
name = "remotec-core"
version = "0.1.0"
edition = "2021"
authors = ["RemoteC Team"]
description = "High-performance remote control engine for RemoteC"
license = "MIT"

[lib]
name = "remotec_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Screen capture and input
scrap = "0.5"
enigo = "0.2"
winapi = { version = "0.3", features = ["winuser", "wingdi", "dwmapi", "windef", "minwindef"], optional = true }
x11 = { version = "2.21", optional = true }
xcb = { version = "1.3", optional = true }
core-graphics = { version = "0.23", optional = true }
core-foundation = { version = "0.9", optional = true }

# Video encoding
openh264 = { version = "0.4", optional = true }
# TODO: Add these dependencies for additional codecs
# ffmpeg-next = "6.1"
# vpx = "0.1"

# Networking
tokio = { version = "1.36", features = ["full"] }
# TODO: Add WebRTC when implementing transport
# webrtc = "0.10"
quinn = "0.10"
bytes = "1.5"
rustls = "0.21"
rcgen = "0.11"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# FFI
libc = "0.2"
once_cell = "1.19"

# Compression
zstd = "0.13"
lz4 = "1.24"

# Utilities
crossbeam = "0.8"
parking_lot = "0.12"
rayon = "1.8"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
mockall = "0.12"
serial_test = "3.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = ["windows", "linux", "macos", "openh264"]
windows = ["winapi"]
linux = ["x11", "xcb"]
macos = ["core-graphics", "core-foundation"]
production = ["openh264"]


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true